# flock_env

./: .gitignore  .pre-commit-config.yaml  README.md  agent_experience_buffer.py  dqn.py  flock_env.py  network.py  prototyping.ipynb  pyproject.toml  requirements.txt  usage.ipynb
.github/workflows/: pre-merge.yaml  run-tests.yaml
deprecated/: .gitignore  .pre-commit-config.yaml  README.md  dqn.py  flock_env.py  network.py  tox.ini
deprecated/tests/: test_agent_memory_buffer.py  test_discrete_env.py  test_torus.py
examples/: boids_training.py  ppo_agent.py  ppo_example.ipynb  ppo_example.py  ppo_training.py  predator_prey_training.py
flock_env/: __init__.py  base_env.py  data_types.py  env.py  pred_prey_env.py  rewards.py  simple_env.py  steps.py  utils.py  vision_env.py  visualisation.py
tests/: test_agent_memory_buffer.py  test_base_environment.py  test_discrete_env.py  test_examples.py  test_predator_prey_environment.py  test_readme_example.py  test_simple_environment.py  test_torus.py  test_utils.py  test_vision_env.py
