[tool.poetry]
name = "flock-env"
version = "0.1.0"
description = "Multi-agent Flock Environment Implemented in JAX"
authors = ["zombie-einstein <zombie-einstein@proton.me>"]
readme = "README.md"
packages = [{include = "flock_env"}]
homepage = "https://github.com/zombie-einstein/flock_env"
repository = "https://github.com/zombie-einstein/flock_env"
keywords = ["jax", "rl", "multi-agent rl"]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
gymnax = "^0.0.6"
jax = "^0.4.4"
chex = "^0.1.6"
matplotlib = "^3.7.1"
scipy = ">=1.10.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
taskipy = "^1.10.3"
pytest = "^7.2.1"
jax-ppo = { git = "https://github.com/zombie-einstein/JAX-PPO.git", develop=false }
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = { cmd = "pytest tests", help="Run tests"}
lint = { cmd = "pre-commit run --all-files", help="Code format checks"}
